Release Notes for Cppcheck 2.19

New checks:
- Detect zero initialization of unions in which its largest member is not
  declared as the first one. Depending on the compiler, there's no guarantee
  that the complete union will be zero initialized in such scenarios leading to
  potential access of uninitialized memory.

Improved checking:
-

GUI:
-

Changed interface:
-

Deprecations:
-

Other:
- Removed deprecated support for builds with Qt5.
- Added make variables `CXXOPTS` and `LDOPTS` to extend existing `CXXFLAGS` and `LDFLAGS`.
- Added make variables `CPPOPTS` to extend existing `CPPFLAGS`.
- `CPPFLAGS` are not longer being passed to the linker command for `cppcheck` and `testrunner`.
- Removed deprecated platforms `unix32-unsigned` and `unix64-unsigned`.
-